--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <title>Vite + Vue + TS</title>
+    <title>Vite + Vue3 + TS</title>
   </head>
   <body>
     <div id="app"></div>
